--- a/djangogirls/templates/blog/post_list.html
+++ b/djangogirls/templates/blog/post_list.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Post list</h1>
+
+    {% for post in posts %}
+    <div>{{ post.title }}</div>
+    <div>{{ post.content|truncatewords:10 }} </div>
+    <br>
+    {% endfor %}
 </body>
 </html>
